# MotifScanner

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
motif_scanner/: __init__.py  aa_properties.csv  amino_acid_properties.py  blosum.py  cli.py  conservation.py  constants.py  main.py  models.py  motif_builder.py  multi_motif.py  profile_io.py  property_similarity.py  pseudocount.py  report.py  scanner.py  scorer.py
motif_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_blosum.py  test_conservation.py  test_profile_io.py  test_scanner.py
